Fixed Skill alignment and calculations
Used the floor function to fix 0.5 skill ranks

--- a/Celerity/charsheet_celerity.css
+++ b/Celerity/charsheet_celerity.css
@@ -63,11 +63,18 @@
     background-color:white;
 }
 
+.sheet-skill-column-title {
+    float: left;
+    text-align: left;
+    background-color:white;
+}
+
 .sheet-craft-column {
     float: left;
     text-align: right;
     background-color:white;
 }
+
 .sheet-stat-title {
     float: left;
     width: 40%;
